[gd_scene load_steps=2 format=3 uid="uid://chbwcanmqg4rq"]

[ext_resource type="Script" path="res://src/screens/main/join_window/join_window.gd" id="1_s0vap"]

[node name="JoinWindow" type="Window" node_paths=PackedStringArray("ip_edit", "port_edit", "notification_dialog")]
position = Vector2i(0, 36)
size = Vector2i(250, 150)
script = ExtResource("1_s0vap")
ip_edit = NodePath("MarginContainer/VBoxContainer/GridContainer/IPEdit")
port_edit = NodePath("MarginContainer/VBoxContainer/GridContainer/PortEdit")
notification_dialog = NodePath("NotificationDialog")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
columns = 2

[node name="IPLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "IP Address"

[node name="IPEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Port"

[node name="PortEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "9921"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="NotificationDialog" type="AcceptDialog" parent="."]

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/PortEdit" to="." method="_on_port_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
